--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 window.onload = function() {
   // Build a system,
   const ui = SwaggerUIBundle({
-    url: 'https://vippsas.github.io/vipps-ecom-api/swagger.yaml',
+    url: 'https://raw.githubusercontent.com/alfmags/vipps-ecom-api/master/docs/swagger.yaml',
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
